fixed #cities collapse

--- a/assets/scss/_cafes.scss
+++ b/assets/scss/_cafes.scss
@@ -303,7 +303,7 @@ background: #FEFEFE;
       }
       div#cities{
           position: relative;
-          padding: 0 30px;
+          padding: 0 10vw;
           margin-bottom: 15px;
           ul.cities-list{
             text-align: center;
